<resources>
    <string name="app_name">Food Recipe App</string>


    <string name="do_you_want_to_exit">Do you want to Exit?</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>

    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_about_quit_editing">Are you sure about quit Editing?</string>
    <string name="apply">Apply</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="download">Downloads</string>
    <string name="home">Home</string>


</resources>